css/openrazer.css
/*
 * Copyright (C) 2016-2020, 2022 Luke Horwell (lah7)
 * Licensed under CC BY-SA 4.0
 */

/****************************
 * Entire Page
*****************************/
@import url('https://fonts.googleapis.com/css?family=Play');
body {
    font-family: 'Play', 'Ubuntu', 'DejaVu Sans', 'Open Sans', sans-serif;
    font-size: 15px;
    color: #00FF00;
    position: relative;
    height: 100%;
    overflow-y: scroll;
    background-color: #181818;
}

h1, h2, h3, h4, h5 {
    color: #00FF00;
}

h3 {
    margin: 10px 0 15px;
}

h5 {
    font-size: 15px;
}

p {
    color: white;
}

a {
    color: lime;
}

a:hover, a:focus {
    color: green;
}

pre, code {
    background-color: #000;
    color: #00FF00;
}

pre {
    border: 1px solid #181818;
    white-space: pre-line;
}

hr {
    border: 1px solid #404040;
    margin-top: 16px;
    margin-bottom: 16px;
}

.gray {
    color: #808080;
    margin: 10px 0;
}

.gray + .gray {
    margin-top: -8px;
}

/****************************
 * Header
*****************************/
#header {
    height: 143px;
    margin-top: 8px;
    padding-top: 4px;
    vertical-align: middle;
    background-repeat: no-repeat;
    background-size: 100%;
}

#header h2 {
    margin: 1em 3.25em;
    text-shadow: 0px 0px 5px black;
}

body:before {
    content: " ";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 120px;
    animation: rgb 2s linear infinite;
    background-image: url('../img/header.jpg');
    background-size: cover;
}

@keyframes rgb {
    0% {
        filter: hue-rotate(359deg);
    }
    100% {
        filter: hue-rotate(0deg);
    }
}

#logo {
    float: left;
    width: 96px;
    height: 96px;
    padding: 8px;
}

.logo-mini {
    width: 24px;
    height: 24px;
    margin: 2px;
}

.nav-sticky {
    position: fixed;
    top: 0;
    left: 0;
    border-bottom: 1px solid #009600;
}

.nav-top {
    position: absolute;
    top: 123px;
    left: 0;
    border-bottom: 1px solid #323232;
    min-height: 56px;
}

#nav-menu {
    width: 100%;
    background: #000;
    color: lime;
    padding: 8px;
    z-index: 10;
}

#mini-logo-text {
    padding-top: 4px;
    text-align: left;
    float: left;
    font-size: 20px;
    margin: 0;
}

@media (max-width: 660px) {
    #mini-logo-text {
        display: none !important;
    }
}

/****************************
 * Sections of the Page Background
*****************************/
.section {
    background-color: black;
    box-shadow: 0px 0px 10px black;
    padding: 16px;
}

.section-gap {
    background-color: #181818;
    padding-top: 60px;
}

/****************************
 * Features/App Grid
*****************************/
.features-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
    justify-content: center;
}

.feature {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 24px 16px;
}

.feature h4 {
    margin-top: 16px;
}

.feature a {
    margin: auto;
}

.feature img {
    max-width: 64px;
    margin: auto;
}

.feature .gray {
    margin: 0;
}

.features-grid p {
    margin-bottom: 10px;
}

/* When used to display apps */
.features-grid.apps .fa {
    height: 64px;
}

.features-grid.apps .feature a:hover h4,
.features-grid.apps .feature a:focus h4 {
    color: green;
}

.features-grid.apps .feature a:hover img,
.features-grid.apps .feature a:focus img {
    opacity: 0.75;
}

/****************************
 * Supported Devices Grid
*****************************/
.devices {
    width: 100%;
    text-align: center;
    vertical-align: middle;
}

.device-name {
    font-size: 14px;
}

.device-icon {
    height: 220px;
    border: 1px solid black;
    overflow: visible;
}

.device-icon .inner {
    height: 150px;
    max-width: 100%;
    object-fit: contain;
}

.device-icon h5 {
    margin: 0.4em 0;
}

.device-icon code {
    color: gray;
}

.partial-support,
.partial-support > a > h5 {
    color: yellow;
}

.partial-support:hover {
    border-color: yellow;
}

/****************************
 * Footer
*****************************/
footer {
    display: flex;
    margin: 60px 0 15px;
    padding-top: 16px;
    color: #7F7F7F;
    overflow-y: auto;
}

footer p {
    color: gray;
}

footer p em {
    color: lightgray;
    font-style: normal;
}

.social-links {
    margin-left: auto;
}

.social-links a {
    display: inline-block;
    vertical-align: middle;
}

.social-links img {
    width: 32px;
    height: 32px;
}

.social:hover,
.social:focus {
    color: #00cb00;
}

.social:hover img,
.social:focus img {
    filter: brightness(0.85);
}

.social + .social {
    margin-left: 0.5em;
}

@media (max-width: 768px) {
    footer {
        flex-wrap: wrap;
    }

    .footer-text,
    .social-links {
        flex: 100%;
    }

    .social-links {
        margin: 16px 0;
    }
}

/****************************
 * Custom Buttons Override
*****************************/
.nav {
    float: right;
}

.nav > li > a, .btn {
    padding: 8px;
    color: white;
}

.nav > li > a:hover,
.nav > li > a:focus,
.nav > li > a:hover {
    background: linear-gradient(#007300, #006400);
    color: white;
    text-decoration: none;
}

.nav > li > a:active {
    background: linear-gradient(#006400, #007300);
    color: white;
}

.nav > li.active > a,
.nav > li.active > a:focus,
.nav > li.active > a:hover {
    background-color: green;
    color: white;
}


/****************************
 * Custom Panels Override
*****************************/
.panel-group .panel {
    border: none;
}

.panel-default > .panel-heading {
    background-color: black;
    color: white;
}

.distro-logo {
    filter: grayscale(1);
    transition: filter 0.25s;
}

.panel-body {
    background-color: black;
}

.panel-default {
    border-color: black;
    color: white;
    background-color: black;
    transition: padding 0.25s, margin 0.25s, box-shadow 0.25s, border-radius 0.25s;
}

.panel-default.active {
    border: 1px solid green;
    padding: 1em;
    margin: 1em -2em;
    box-shadow: 0px 0px 5px 10px #181818;
}

.panel-default.active .distro-logo {
    filter: grayscale(0);
}

.panel-default.active .panel-title a {
    color: lime;
    text-decoration: none;
    outline: none;
}

.panel-group .panel-heading + .panel-collapse > .list-group,
.panel-group .panel-heading + .panel-collapse > .panel-body {
    border-color: #404040;
}


/****************************
 * Project Links
*****************************/
.project-links {
    padding: 4px 0;
    text-align: center;
}

.project-links a {
    display: block;
    max-width: 150px;
    margin: auto;
}

.project-links span {
    margin-bottom: 8px;
}

@media (max-width: 768px) {
    .project-links a {
        margin-bottom: 32px;
    }
}

/****************************
 * Misc.
*****************************/
.section .row-fluid + h3 {
    margin-top: 32px;
}

.danger > h5 {
    padding-top: 8px;
    padding-bottom: 8px;
    color: red;
}

/* Distro list */
.distro-logo {
    width: 24px;
    height: 24px;
}

.panel-title a {
    text-decoration: none;
}

.panel-title a:hover img,
.panel-title a:focus img {
    filter: grayscale(0);
}

.legal {
    color: gray;
    font-size: 0.8em;
    font-style: italic;
    margin-top: 2em;
}

